@startuml DatabaseERD

' Force left-to-right layout and orthogonal connectors
left to right direction
skinparam linetype ortho
skinparam classAttributeIconSize 0

title NewsAgent Database Entity-Relationship Diagram

' User table (Django's built-in User model)
entity "User" {
  * id : UUID
  * username : str
  * email : str
  * password : str
  * is_active : bool
  * date_joined : datetime
}

' APIKey table
entity "APIKey" {
  * id : UUID
  * user_id : UUID [FK]
  * key : str
  * name : str
  * created_at : datetime
  * last_used_at : datetime
  * is_active : bool
}

' UserQuery table
entity "UserQuery" {
  * id : UUID
  * username : str
  * password : str
  * email : str
  * query : str
}

' UserTool table
entity "UserTool" {
  * id : UUID
  * user_id : UUID [FK]
  * name : str
  * description : str
  * created_at : datetime
  * updated_at : datetime
  * is_active : bool
  * method : str
  * url_template : str
  * headers : JSON
  * default_params : JSON
  * data : JSON
  * json_payload : JSON
  * docstring : str
  * target_fields : JSON
  * param_mapping : JSON
  * is_preferred : bool
}

' Relationships
User ||--o{ APIKey : owns
User ||--o{ UserQuery : submits
User ||--o{ UserTool : defines

@enduml